# Soaring-Voyage

./: .env.example  .gitignore  Makefile  README.md  docker-compose.demo.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  exports.py  imports.py  main.py  realtime.py
backend/app/api/: dependencies.py  routes.py  schemas.py
backend/app/core/: errors.py  security.py
backend/app/db/: __init__.py  pool.py  session.py
backend/app/domain/: memory.py  models.py  postgres.py  repository.py
backend/app/grading/: __init__.py  engine.py  llm_client.py  mathcheck.py  normalization.py
backend/app/harness/: __init__.py  dataset.py  runner.py
backend/app/rag/: __init__.py  qdrant.py
backend/app/static/: demo.html
backend/harness/dataset/: grading_cases.jsonl
backend/migrations/: 001_initial_schema.sql  002_user_token_version.sql  003_grading_source_values.sql  __init__.py  migrate.py
backend/scripts/: demo_main_flow.py  generate_harness_dataset.py  run_harness_ci.py
backend/tests/: conftest.py
backend/tests/api/: test_audit_regressions.py  test_core_api.py  test_independent_review_blockers.py  test_review_fixes.py
backend/tests/integration/: test_postgres_vertical_slice.py
backend/tests/unit/: test_app_lifecycle.py  test_db_contract.py  test_exports.py  test_grading_engine.py  test_harness_runner.py  test_identity_repository_contract.py  test_imports.py  test_llm_client.py  test_persistence_config.py  test_persistence_migration.py  test_postgres_repository.py  test_qdrant_indexer.py  test_rag_grading_context.py  test_realtime_tickets.py
docs/: ai-specialist.md  api-design.md  database-design.md  design.md  (+5 more)
(+3 files in other folders)
