[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "soaring-voyage-backend"
version = "0.1.0"
description = "Soaring Voyage AI mathematics grading backend"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "langgraph>=0.6,<2",
  "openai>=1.99,<3",
  "passlib[bcrypt]>=1.7,<2",
  "pydantic-settings>=2.10,<3",
  "pyjwt>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "qdrant-client>=1.15,<2",
  "redis>=6,<8",
  "structlog>=25,<26",
  "sympy>=1.14,<2",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<10",
  "pytest-asyncio>=1.1,<2",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "migrations"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["app", "tests", "migrations"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "S", "B"]
ignore = ["S101", "B008", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20", "ANN"]
"app/harness/**" = ["T20", "ANN"]
"migrations/**" = ["T20"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unreachable = true
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
